[package]
name = "roguelike_ansi_terminal"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[dependencies]
env_logger = "0.7"
prototty_ansi_terminal = "0.28"
prototty_native_audio = "0.28"
roguelike_native = { path = "../native" }
roguelike_prototty = { path = "../prototty" }
