[package]
name = "roguelike_graphical"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[features]
default = ["prototty_graphical"]

[dependencies]
env_logger = "0.7"
prototty_graphical = { version = "0.28", optional = true }
prototty_graphical_gfx = { version = "0.28", optional = true }
prototty_native_audio = "0.28"
roguelike_prototty = { path = "../prototty" }
roguelike_native = { path = "../native" }
