[package]
name = "rip_graphical"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[features]
force_vulkan = ["chargrid_graphical/force_vulkan"]
force_dedicated_audio_thread = ["rip_native/force_dedicated_audio_thread"]


[dependencies]
env_logger = "0.8"
rip_app = { path = "../app" }
rip_native = { path = "../native" }
chargrid_graphical = { version = "0.3", features = ["gamepad"] }
